tests/fail/null/5.has
function main() : int {
    var a : int = 1
    a = NULL

    return 0
}